@@ -9,6 +9,8 @@ Unreleased
 - LP #383666: Paste from Word to blog posts emails content but drops from
   blogentry
 
+- Scale and crop uploaded profile photos to fit 75 x 100.
+
 3.4 (2009-07-09)
 ----------------
 
